--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,3 +1,4 @@
+# Construcción del contenedor para app Flask:
 # Imagen base oficial de Python
 FROM python:3.11-slim
 
@@ -8,7 +9,7 @@ WORKDIR /app
 COPY . .
 
 # Instalamos las dependencias de Python
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt #Flask y prometheus_client
 
 # Exponemos el puerto 5000 (donde corre Flask)
 EXPOSE 5000
